Fix HTML structure and update contact links

--- a/index.html
+++ b/index.html
@@ -29,16 +29,20 @@
                 <h4>Start-up Developer</h4>
 
                 <div class="function-header">
+                    <a href="tel:09064823324">
                     <button class="call-now-btn">
                         <img class="call-now-logo" src="call-now.png">
                         Call Now
                     </button>
+                    </a>
 
+                    <a href="mailto:danrheyvenaudine23@gmail.com>
                     <button class="send-email-btn">
                         <img class="email-logo" src="email-logo.png"> 
 
                         Send Email
                     </button>
+                    </a>
                 </div>
 
             </div>
@@ -173,4 +177,5 @@
     </div>
     
 </body>
+
 </html>
