Fix HTML formatting and structure

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     </button>
                     </a>
 
-                    <a href="mailto:danrheyvenaudine23@gmail.com>
+                    <a href="mailto:danrheyvenaudine23@gmail.com">
                     <button class="send-email-btn">
                         <img class="email-logo" src="email-logo.png"> 
 
@@ -179,3 +179,4 @@
 </body>
 
 </html>
+
