Refine experience details in index.html
Updated experience section with more specific project details.

--- a/index.html
+++ b/index.html
@@ -73,11 +73,11 @@
             <div class="experience-card">
                 <h4>Experience</h4>
                 <ul>
-                    <li>Grade 10 - C++ projects </li>
+                    <li>Grade 10 - Build basic C++ console application</li>
                     <li>Grade 11-12 - Research: Robosurero</li>
                     <li>Freelance project - Automatic Vacuum and Mop Project</li>
-                    <li>1st year projects - C#</li>
-                    <li>1st year projects - HTML & CSS</li>
+                    <li>1st Year College - Basic C# Console projects (POS, Basic Calculator, etc.</li>
+                    <li>1st Year College - Using HTML & CSS for website projects</li>
                     
                 </ul>
             </div>
@@ -179,4 +179,5 @@
 </body>
 
 </html>
+
 
