Fix HTML formatting and structure

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                     <li>Grade 10 - Build basic C++ console application</li>
                     <li>Grade 11-12 - Research: Robosurero</li>
                     <li>Freelance project - Automatic Vacuum and Mop Project</li>
-                    <li>1st Year College - Basic C# Console projects (POS, Basic Calculator, etc.</li>
+                    <li>1st Year College - Basic C# Console projects (POS, Basic Calculator, etc.)</li>
                     <li>1st Year College - Using HTML & CSS for website projects</li>
                     
                 </ul>
@@ -179,5 +179,6 @@
 </body>
 
 </html>
+
 
 
