--- a/index.html
+++ b/index.html
@@ -77,7 +77,9 @@
                     <li>Grade 11-12 - Research: Robosurero</li>
                     <li>Freelance project - Automatic Vacuum and Mop Project</li>
                     <li>1st Year College - Basic C# Console projects (POS, Basic Calculator, etc.)</li>
-                    <li>1st Year College - Using HTML & CSS for website projects</li>
+                    <li>1st Year College - Using HTML & CSS for Website Projects</li>
+                    <li>1st Year College - Valentine's Card Website</li>
+                    <li>1st Year College - Coffee Shop Website</li>
                     
                 </ul>
             </div>
@@ -179,6 +181,7 @@
 </body>
 
 </html>
+
 
 
 
